# OCRHarborWorker

./: .env.example  .gitignore  README.md  benchmark.py  deploy.sh  install.sh  requirements.txt  restart-server.sh
gpu_worker/: auth.py  config.py  job_manager.py  main.py  models.py  ocr_bridge.py  webhook.py
ocrdoctotext_pkg/: pyproject.toml
ocrdoctotext_pkg/ocrdoctotext/: __init__.py  engine.py  preprocessing.py  types.py  utils.py
ocrdoctotext_pkg/ocrdoctotext/backends/: __init__.py  base.py  lighton.py  paddleocrvl.py
ocrharbor_worker/: auth.py  job_manager.py  main.py  ocr_bridge.py  webhook.py
